Cambio en imagen
Se cambió el nombre de la imagen, para quitarle el acento y se lea en
el servidors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body{
 
 	
 <div class="text4">
-	<a href="http://www.corpus.unam.mx/GILkaton/"><img src="img/GILkat%C3%B3n-02.jpg" title="GILkatón"></a>
+	<a href="http://www.corpus.unam.mx/GILkaton/"><img src="img/GILkaton-02.jpg" title="GILkaton"></a>
 	<a href="http://www.corpus.unam.mx/cursopln/"><img src="img/PYTHON_4-01.jpg"></a>
 	<a href="http://www.corpus.unam.mx/colico/VIIICoLiCo.html"><img src="img/Colico.jpg" align="top"></a>
 </div>
